Needed a change to make this work with Java 17 (on MAC)